@@ -7,6 +7,8 @@ into a class representation defined by `pydot`.
 Author: Michael Krause <michael@krause-software.de>
 Fixes by: Ero Carrera <ero.carrera@gmail.com>
 """
+import logging
+
 from pyparsing import (
     nestedExpr,
     Literal,
@@ -32,6 +34,10 @@ import pydot
 
 __author__ = ["Michael Krause", "Ero Carrera"]
 __license__ = "MIT"
+
+
+_logger = logging.getLogger('pydot.dot_parser')
+_logger.debug('pydot dot_parser module initializing')
 
 
 class P_AttrList(object):
