@@ -7,6 +7,9 @@ Pydot versions since 1.4.2 adhere to [PEP 440-style semantic versioning]
 2.0.0 (unreleased)
 ------------------
 
+Added:
+- Add standard Python logging, using the logger name `pydot`.
+
 Changed:
 - Reorganized package/module structure. (#230)
   The `pydot` package is installed as a directory now instead of as
